formward requests to mq

--- a/rebar.config
+++ b/rebar.config
@@ -14,5 +14,7 @@
 {deps, [
 	{lager, ".*", {git, "git://github.com/basho/lager.git", {branch, "master"}}},
 	{elog, ".*", {git, "git://github.com/erylee/elog.git", {branch, "master"}}},
-	{folsom, ".*", {git, "git://github.com/boundary/folsom.git", {branch, "master"}}}
+	{folsom, ".*", {git, "git://github.com/boundary/folsom.git", {branch, "master"}}},
+    {msgbus_amqp_proxy, ".*", {git, "git://github.com/TigerZhang/msgbus_amqp_proxy.git", {branch, "master"}}},
+    {msgbus_common_utils, ".*", {git, "git://github.com/TigerZhang/msgbus_common_utils.git", {branch, "master"}}}
 ]}.
