--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -16,7 +16,13 @@
 		 compiler,
 		 gs,
 		 runtime_tools,
+        debugger,
 		 appmon,
+        rabbit_common,
+        amqp_client,
+        protobuffs,
+        msgbus_common_utils,
+        msgbus_amqp_proxy,
 		 {folsom, load},
          emqtt
         ]},
@@ -45,8 +51,14 @@
        {app, gs, [{incl_cond, include}]},
        {app, runtime_tools, [{incl_cond, include}]},
        {app, appmon, [{incl_cond, include}]},
+        {app, debugger, [{incl_cond, include}]},
        {app, syntax_tools, [{incl_cond, include}]},
        {app, folsom, [{incl_cond, include}]},
+        {app, protobuffs, [{incl_cond, include}]},
+        {app, rabbit_common, [{incl_cond, include}]},
+        {app, amqp_client, [{incl_cond, include}]},
+        {app, msgbus_common_utils, [{incl_cond, include}]},
+        {app, msgbus_amqp_proxy, [{incl_cond, include}]},
        {app, emqtt, [{mod_cond, app}, {incl_cond, include}]}
       ]}.
 
@@ -58,6 +70,7 @@
            {mkdir, "log/"},
            {mkdir, "etc/"},
            {mkdir, "var/data/"},
+            {mkdir, "proto/"},
            {copy, "files/erl", "\{\{erts_vsn\}\}/bin/erl"},
            {template, "files/nodetool", "\{\{erts_vsn\}\}/bin/nodetool"},
            {template, "files/emqtt", "bin/emqtt"},
