--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,16 @@ rel/emqtt
 Mnesia.nonode@nohost/schema.DAT
 
 erl_crash.dump
+.idea/.name
+.idea/compiler.xml
+.idea/copyright/profiles_settings.xml
+.idea/dictionaries/zhanghu.xml
+.idea/emacs.xml
+.idea/encodings.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/rebar.xml
+.idea/scopes/scope_settings.xml
+.idea/uiDesigner.xml
+.idea/vcs.xml
+.idea/workspace.xml
