--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -6,6 +6,7 @@
         [
          kernel,
          stdlib,
+         inets,
          sasl,
          mnesia,
 		 bear,
@@ -41,6 +42,7 @@
        {excl_app_filters, ["\.gitignore"]},
        {app, kernel, [{incl_cond, include}]},
        {app, stdlib, [{incl_cond, include}]},
+       {app, inets, [{incl_cond, include}]},
        {app, sasl, [{incl_cond, include}]},
        {app, mnesia, [{incl_cond, include}]},
        {app, compiler, [{incl_cond, include}]},
