add handler of puback from mq

--- a/.gitignore
+++ b/.gitignore
@@ -3,25 +3,9 @@ ebin
 var
 *.log
 rel/emqtt
-
-
 .project
-
 .settings/org.erlide.core.prefs
-
 Mnesia.nonode@nohost/schema.DAT
-
 erl_crash.dump
-.idea/.name
-.idea/compiler.xml
-.idea/copyright/profiles_settings.xml
-.idea/dictionaries/zhanghu.xml
-.idea/emacs.xml
-.idea/encodings.xml
-.idea/misc.xml
-.idea/modules.xml
-.idea/rebar.xml
-.idea/scopes/scope_settings.xml
-.idea/uiDesigner.xml
-.idea/vcs.xml
-.idea/workspace.xml
+.idea
+log
