support node_tag config

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -33,6 +33,7 @@
     ]},
     {emqtt, [
         {auth, {anonymous, []}}, %internal, anonymous
+        {node_tag, <<"front1">>},
         {listeners, [
             {1883, [
                 binary,
